# f5xc-waffleiron

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  llm.txt
docs/: README.md  api-usage.md  architecture.md  asm-xml-schema.md  cli-and-api-workflows.md  cli-usage.md  coverage.md  field-mapping.md  gaps-and-decisions.md  xc-target-objects.md
tests/: test_e2e.py
waffleiron/: pyproject.toml
waffleiron-api/: pyproject.toml
waffleiron-api/src/waffleiron_api/: __init__.py  config.py  main.py  schemas.py  sessions.py
waffleiron-api/src/waffleiron_api/routers/: __init__.py  conversions.py  xc.py
waffleiron-api/tests/: conftest.py  test_conversions.py  test_sessions.py  test_xc_endpoints.py
waffleiron-cli/: pyproject.toml
waffleiron-cli/src/waffleiron_cli/: __init__.py  main.py
waffleiron-cli/tests/: conftest.py  test_cli.py
waffleiron-web/: index.html  package.json  (+3 more)
waffleiron/src/waffleiron/: __init__.py  analysis.py  decisions.py  manifest.py  model.py  reporters.py  validators.py
waffleiron/src/waffleiron/parsers/: __init__.py  detect.py  json_parser.py  xml_parser.py
waffleiron/src/waffleiron/translators/: __init__.py  app_firewall.py  exclusion_policy.py  http_lb_patch.py  mappings.py  service_policy.py  utils.py
waffleiron/src/waffleiron/xc_client/: __init__.py  client.py  config.py  errors.py
waffleiron/tests/: conftest.py  test_analysis.py  test_app_firewall.py  test_decisions.py  test_detect.py  test_exclusion_policy.py  test_http_lb_patch.py  test_integration.py  test_json_parser.py  test_manifest.py  test_mappings.py  test_model.py  test_orchestrator.py  test_output_format.py  test_reporters.py  test_service_policy.py  test_validators.py  test_xc_client.py  test_xc_config.py  test_xml_parser.py
waffleiron/tests/fixtures/: kitchen_sink.xml  mature_tuned.xml  minimal_blocking.json  minimal_blocking.xml  positive_security.xml  rapid_deployment.xml  real_export_linux_high.xml
(+27 files in other folders)
