[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waffleiron-api"
version = "0.1.0"
description = "REST API for WaffleIron ASM-to-XC policy converter"
requires-python = ">=3.12"
dependencies = [
    "waffleiron>=0.1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/waffleiron_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
