[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waffleiron-cli"
version = "0.1.0"
description = "CLI for WaffleIron ASM-to-XC policy converter"
requires-python = ">=3.12"
dependencies = [
    "waffleiron>=0.1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
waffleiron = "waffleiron_cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/waffleiron_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
