[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waffleiron"
version = "0.1.0"
description = "Convert BIG-IP ASM/AWAF policies to F5 XC WAF configurations"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "urllib3>=2.0",
    "requests-pkcs12>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/waffleiron"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
